syntax="proto3";
package tenant;

option go_package = "github.com/krishnachowdaryvanam/authboard/proto/tenantpb";

service tenantService{
   rpc CreateTenant(CreateTenantRequest) returns (TenantResponse);
   rpc GetTenant(GetTenantRequest) returns (TenantResponse);
   rpc UpdateTenant(UpdateTenantRequest) returns(TenantResponse);
   rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse);
}

message CreateTenantRequest {
    string name = 1;
}

message GetTenantRequest{
    string id = 1;
}

message UpdateTenantRequest{
    string id = 1;
    string name = 2;
}

message DeleteTenantRequest{
    string id = 1;
}

message TenantResponse{
    string id = 1;
    string name = 2;
}

message DeleteTenantResponse{
    bool success = 1;
}