syntax = "proto3";

package user;

option go_package = "github.com/krishnachowdaryvanam/authboard/proto/userpb";

service userService{
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest{
    string tenant_id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
    string password = 3;
    string role = 4;
}

message UserResponse{
    string id = 1;
    string tenant_id = 2;
    string email = 3;
    string password = 4;
    string created_at = 5;
    string updated_at =6;
}

message DeleteUserRequest{
    string id = 1;
}

message DeleteUserResponse{
    bool success = 1;
}